Try to implement Dataset2nparray in a different way. the performance should be checked.

--- a/Fall_Detection_System_v2.ipynb
+++ b/Fall_Detection_System_v2.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSqN3r/GDhcfQPzHTbKizX",
+      "collapsed_sections": [
+        "wXsG6DAmfm7m"
+      ],
+      "authorship_tag": "ABX9TyPR4MvYnidSiH5RlRytYid8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +41,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x4Hyqy-KZ3Eu",
-        "outputId": "8584e66e-edbe-45b9-b3d8-fde3c75475e9"
+        "outputId": "fbf6f724-b52e-4aef-8ded-468908a14151"
       },
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +85,7 @@
         "\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -104,7 +107,7 @@
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_dataset.zip\n",
         "# !unzip /content/gdrive/MyDrive/Datasets/SisFall_enhanced.zip"
       ],
-      "execution_count": 65,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -130,7 +133,7 @@
       "metadata": {
         "id": "Gi1u8eYf4VuO"
       },
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -160,7 +163,7 @@
       "metadata": {
         "id": "jDXCmXMKosSB"
       },
-      "execution_count": 21,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -187,8 +190,84 @@
         "        allfiles.remove('desktop.ini')\n",
         "  return np.hstack(allfiles)"
       ],
-      "execution_count": 22,
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ad = get_file_name('/content/gdrive/MyDrive/Datasets/SisFall_dataset/')\n",
+        "ad.sort()\n",
+        "ad"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AkKiW5vZ7MJ4",
+        "outputId": "f3d6e461-1cbc-4460-f5ae-38fb8fe5593c"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['/content/gdrive/MyDrive/Datasets/SisFall_dataset/SA01/D01_SA01_R01.txt',\n",
+              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SA01/D02_SA01_R01.txt',\n",
+              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SA01/D03_SA01_R01.txt',\n",
+              "       ...,\n",
+              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SE15/D17_SE15_R03.txt',\n",
+              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SE15/D17_SE15_R04.txt',\n",
+              "       '/content/gdrive/MyDrive/Datasets/SisFall_dataset/SE15/D17_SE15_R05.txt'],\n",
+              "      dtype='<U70')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "weight = 200\n",
+        "duration = {'D01':100,'D02':100,'D03':100,'D04':100,'D05':25,'D06':25,'D07':12,\n",
+        "            'D08':12,'D09':12,'D10':12,'D11':12,'D12':12,'D13':12,'D14':12,\n",
+        "            'D15':12,'D16':12,'D17':25,'D18':12,'D19':12,'F01':15,'F02':15,\n",
+        "            'F03':15,'F04':15,'F05':15,'F06':15,'F07':15,'F08':15,'F09':15,\n",
+        "            'F10':15,'F11':15,'F12':15,'F13':15,'F14':15,'F15':15}\n",
+        "\n",
+        "trials =  {'D01':1,'D02':1,'D03':1,'D04':1,'D05':5,'D06':5,'D07':5,\n",
+        "            'D08':5,'D09':5,'D10':5,'D11':5,'D12':5,'D13':5,'D14':5,\n",
+        "            'D15':5,'D16':5,'D17':5,'D18':5,'D19':5,'F01':5,'F02':5,\n",
+        "            'F03':5,'F04':5,'F05':5,'F06':5,'F07':5,'F08':5,'F09':5,\n",
+        "            'F10':5,'F11':5,'F12':5,'F13':5,'F14':5,'F15':5}\n",
+        "s = 0\n",
+        "for key in duration.keys():\n",
+        "  s += weight * duration[key] * trials[key]\n",
+        "s*38"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IKd3zdJC7Oiq",
+        "outputId": "2edd5ac7-595c-4f37-f8d9-4d3e3a8c1fe0"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "19912000"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,11 +331,14 @@
         "      labels[labels == 2] = 1\n",
         "      return labels\n",
         "\n",
-        "  def datasets_to_nparray(self, datasets_address_array, column_dimension=10):\n",
-        "    result = np.empty((0, column_dimension), int)\n",
+        "  def datasets_to_nparray(self, datasets_address_array, outputsize=20000000, column_dimension=10):\n",
+        "    result = np.zeros((outputsize, column_dimension), 'int16')\n",
+        "    first_index = 0\n",
         "    for address in datasets_address_array:\n",
-        "      result = np.concatenate(\n",
-        "          (result, self.merge_features(address)),axis=0)\n",
+        "      feature = self.merge_features(address)\n",
+        "      # print(len(feature), first_index)\n",
+        "      result[first_index : (first_index+len(feature))] = feature\n",
+        "      first_index += len(feature)\n",
         "    return result\n",
         "  \n",
         "  def windowing(self, dataset, window_size):\n",
@@ -289,71 +371,79 @@
       "metadata": {
         "id": "Rh4rp7_Z_i0q"
       },
-      "execution_count": 77,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "%%time\n",
         "ad = get_file_name('/content/gdrive/MyDrive/Datasets/SisFall_dataset/')\n",
-        "ad\n",
+        "ad.sort()\n",
         "dp = DatasetProcessor()\n",
         "result = dp.datasets_to_nparray(ad)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 346
-        },
-        "id": "_1pcZKGXL-OM",
-        "outputId": "b3e0cf50-671e-44d5-85d3-5db30b002891"
+        "id": "_1pcZKGXL-OM"
       },
-      "execution_count": 78,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-78-a6d5baaf01a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDatasetProcessor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets_to_nparray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mad\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-77-72cc2b08619d>\u001b[0m in \u001b[0;36mdatasets_to_nparray\u001b[0;34m(self, datasets_address_array, column_dimension)\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0maddress\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdatasets_address_array\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m       result = np.concatenate(\n\u001b[0;32m---> 55\u001b[0;31m           (result, self.merge_features(address)),axis=0)\n\u001b[0m\u001b[1;32m     56\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-77-72cc2b08619d>\u001b[0m in \u001b[0;36mmerge_features\u001b[0;34m(self, data_path, flag)\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;34m''' Feature Extraction should be changed.'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mflag\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-77-72cc2b08619d>\u001b[0m in \u001b[0;36mread_data\u001b[0;34m(self, data_path)\u001b[0m\n\u001b[1;32m     12\u001b[0m     data.columns = ['ADXL345_x', 'ADXL345_y', 'ADXL345_z', 'ITG3200_x', 'ITG3200_y', 'ITG3200_z', 'MMA8451Q_x',\n\u001b[1;32m     13\u001b[0m                     'MMA8451Q_y', 'MMA8451Q_z']\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'MMA8451Q_z'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'MMA8451Q_z'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m       \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self, arg, na_action)\u001b[0m\n\u001b[1;32m   4160\u001b[0m         \"\"\"\n\u001b[1;32m   4161\u001b[0m         \u001b[0mnew_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_map_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mna_action\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mna_action\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4162\u001b[0;31m         return self._constructor(new_values, index=self.index).__finalize__(\n\u001b[0m\u001b[1;32m   4163\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"map\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4164\u001b[0m         )\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data, index, dtype, name, copy, fastpath)\u001b[0m\n\u001b[1;32m    437\u001b[0m                     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    438\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 439\u001b[0;31m                 \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msanitize_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    440\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    441\u001b[0m                 \u001b[0mmanager\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_option\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"mode.data_manager\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/core/construction.py\u001b[0m in \u001b[0;36msanitize_array\u001b[0;34m(data, index, dtype, copy, raise_cast_failure, allow_2d)\u001b[0m\n\u001b[1;32m    543\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    544\u001b[0m             \u001b[0;31m# we will try to copy by-definition here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 545\u001b[0;31m             \u001b[0msubarr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_try_cast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mraise_cast_failure\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    546\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    547\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mABCExtensionArray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/core/construction.py\u001b[0m in \u001b[0;36m_try_cast\u001b[0;34m(arr, dtype, copy, raise_cast_failure)\u001b[0m\n\u001b[1;32m    704\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0msanitize_to_nanoseconds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    705\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 706\u001b[0;31m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmaybe_infer_to_datetimelike\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    707\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0marr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    708\u001b[0m                 \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/pandas/core/dtypes/cast.py\u001b[0m in \u001b[0;36mmaybe_infer_to_datetimelike\u001b[0;34m(value)\u001b[0m\n\u001b[1;32m   1511\u001b[0m         \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1512\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1513\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1514\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1515\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "dp.windowing(result, window_size=200)"
+        "feature, label = dp.windowing(result, window_size=200)"
+      ],
+      "metadata": {
+        "id": "ZsgOQmQNTYK8"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = np.zeros((20, 10), int)\n",
+        "result[16:18] = np.array([[1,2,3,4,5,6,7,8,9,10],[11,12,13,14,15,16,17,18,19,20]])\n",
+        "result"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ZsgOQmQNTYK8",
-        "outputId": "f23e3956-3050-474c-885f-ed6037777912"
+        "id": "LbLQnBw0X-MV",
+        "outputId": "415c16b1-03db-4f26-eee3-26f5d8c3c27e"
       },
-      "execution_count": 61,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10], dtype=int16)"
+              "array([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10],\n",
+              "       [11, 12, 13, 14, 15, 16, 17, 18, 19, 20],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+              "       [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0]])"
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 9
         }
       ]
     },
